[workspace]
resolver = "3"
members = ["crates/xtask", "crates/rbq", "crates/nanite"]

[patch.crates-io]
embassy-executor = { version = "0.7.0", git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-time = { version = "0.4.0", git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-rp = { version = "0.4.0", git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-futures = { version = "0.1.1", git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-sync = { version = "0.6.2", git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
defmt = { version = "0.3.100", git = "https://github.com/xacrimon/defmt.git", rev = "2c35688" }
