[workspace]
resolver = "3"
members = ["crates/xtask", "crates/rbq", "crates/nanite"]

[patch.crates-io]
embassy-executor = { git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-time = { git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-rp = { git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-futures = { git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
embassy-sync = { git = "https://github.com/xacrimon/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
defmt = { git = "https://github.com/xacrimon/defmt.git", rev = "2c35688" }
