[package]
name = "nanite"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be", features = [
    "defmt",
    "critical-section-impl",
    "unstable-pac",
    "time-driver",
    "intrinsics",
    "rom-v2-intrinsics",
    "run-from-ram",
    "boot2-ram-memcpy",
    "imagedef-secure-exe",
    "rp235xa",
    "binary-info",
] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git", rev = "659c616f9f13aa6f157eaef5279f09805449b5be" }
defmt = { version = "0.3", features = ["encoding-raw"] }
rbq = { path = "../rbq" }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[package.metadata.cargo-machete]
ignored = []
