[package]
name = "nanite"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "critical-section-impl",
    "unstable-pac",
    "time-driver",
    "intrinsics",
    "rom-v2-intrinsics",
    "run-from-ram",
    "boot2-ram-memcpy",
    "imagedef-secure-exe",
    "rp235xa",
    "binary-info",
] }
futures-util = { version = "0.3.31", default-features = false, features = ["async-await", "async-await-macro"] }
defmt = { version = "1.0.1", features = ["default-trace", "encoding-raw"] }
rbq = { path = "../rbq" }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
scopeguard = { version = "1.2.0", default-features = false }

[package.metadata.cargo-machete]
ignored = ["cortex-m", "cortex-m-rt", "embassy-time"]
